fix overflow

--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
     opacity: 1;
     filter: blur(0);
 }
+body{
+    overflow-x: hidden;
+}
 @media(prefers-reduced-motion){
     .hidden{
         transition: none;
